# ductape

./: README.md  setup.cfg
src/ductape/: Snakefile  __main__.py  ductape.yaml  samples.csv
src/ductape/cli/: init.py  run.py
src/ductape/envs/: emapper.yaml
src/ductape/profiles/local/: config.yaml
src/ductape/profiles/uppmax/: config.yaml
src/ductape/schemas/: config.schema.yaml  sample.schema.yaml
src/ductape/wrappers/nextflow/: meta.yaml  wrapper.py
