[metadata]
name = ductape
author = John Sundh
author_email = john.sundh@scilifelab.se
url = https://github.com/NBISweden/ductape/
description = Snakemake workflow for wrapping and extending other metagenomic workflows
license = CC0-1.0
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
install_requires =
    ruamel.yaml
    snakemake
    pandas

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ductape = ductape.__main__:main

[options.package_data]
* =
    Snakefile
    ductape.yaml
    samples.csv
